--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -7,6 +7,7 @@
     color: black;
 
     .bg {
+        z-index: 999;
         position: fixed;
         bottom: 0;
         top: 0;
@@ -31,6 +32,8 @@
     }
 
     button {
+        z-index: 999;
+        position: fixed;
         width: 50px;
         height: 50px;
         border-radius: 50%;
